deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getcontato-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getcontato-api
  template:
    metadata:
      labels:
        app: getcontato-api
    spec:
      containers:
        - name: getcontato
          image: mcr.microsoft.com/dotnet/aspnet:8.0
          volumeMounts:
            - mountPath: /app
              name: app-volume
          workingDir: /app
          command: ["dotnet", "GetContato.dll"]
      volumes:
        - name: app-volume
          hostPath:
            path: /caminho/absoluto/para/publish
