kubernetes_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-contato
  namespace: registro-contato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-contato
  template:
    metadata:
      labels:
        app: db-contato
    spec:
      containers:
      - name: db-contato
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - "$(POSTGRES_USER)"
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - "$(POSTGRES_USER)"
          initialDelaySeconds: 5
          periodSeconds: 5
        startupProbe:
          exec:
            command:
              - pg_isready
              - -U
              - "$(POSTGRES_USER)"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5 
          failureThreshold: 6
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-contato
  namespace: registro-contato
spec:
  selector:
    app: db-contato
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: registro-contato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
      - name: postgres-exporter
        image: prometheuscommunity/postgres-exporter
        ports:
        - containerPort: 9187
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: registro-contato
spec:
  selector:
    app: postgres-exporter
  ports:
    - protocol: TCP
      port: 9187
      targetPort: 9187
  type: ClusterIP
---
