kubernetes_rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: registro-contato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        startupProbe:
          exec:
            command:
              - rabbitmq-diagnostics
              - check_running
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5 
          failureThreshold: 5
        livenessProbe:
          exec:
            command:
              - rabbitmqctl
              - status
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 5

        readinessProbe:
          exec:
            command:
              - rabbitmqctl
              - status
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: registro-contato
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
---
